sprint4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl_or_empty
Rule 2     print_stmt -> PRINT LPAREN expr RPAREN SEMICOL
Rule 3     comments_lst -> comments_lst comments
Rule 4     comments_lst -> comments
Rule 5     comments -> words_lst
Rule 6     comments_lst_or_empty -> comments_lst
Rule 7     comments_lst_or_empty -> empty
Rule 8     words_lst -> words_lst COMM
Rule 9     words_lst -> COMM
Rule 10    class_decl_or_empty -> class_lst
Rule 11    class_decl_or_empty -> empty
Rule 12    obj_call_stmt -> ID PERIOD PUT LPAREN expr COMMA expr RPAREN SEMICOL
Rule 13    obj_call_stmt -> ID PERIOD CLEAR LPAREN RPAREN SEMICOL
Rule 14    class_lst -> class_lst comments_lst_or_empty class_decl
Rule 15    class_lst -> comments_lst_or_empty class_decl
Rule 16    class_decl -> access_or_empty CLASS ID ext_or_empty LBRACE decl_lsts RBRACE
Rule 17    access_or_empty -> access_type
Rule 18    access_or_empty -> empty
Rule 19    access_type -> PUBLIC
Rule 20    access_type -> PRIVATE
Rule 21    ext_or_empty -> extends
Rule 22    ext_or_empty -> empty
Rule 23    extends -> EXTENDS ID
Rule 24    decl_lsts -> decl_lsts comments_lst_or_empty decl_lst
Rule 25    decl_lsts -> comments_lst_or_empty decl_lst
Rule 26    decl_lst -> method_decl_stmt
Rule 27    decl_lst -> stmt
Rule 28    var_decl_stmt -> access_or_empty type ID SEMICOL
Rule 29    var_decl_stmt -> access_or_empty type ID EQ expr SEMICOL
Rule 30    func_call_stmt -> access_or_empty type ID EQ ID func_call_params SEMICOL
Rule 31    func_call_stmt -> ID ID EQ NEW ID func_call_params SEMICOL
Rule 32    obj_call_stmt -> ID PERIOD REMOVE LPAREN expr RPAREN SEMICOL
Rule 33    obj_call_stmt -> ID PERIOD ADD LPAREN expr RPAREN SEMICOL
Rule 34    obj_call_stmt -> ID PERIOD ID func_call_params SEMICOL
Rule 35    func_call_params -> LPAREN func_call_param_lst_or_empty RPAREN
Rule 36    func_call_param_lst_or_empty -> func_call_param_lst
Rule 37    func_call_param_lst_or_empty -> empty
Rule 38    func_call_param_lst -> func_call_param_lst COMMA func_call_param
Rule 39    func_call_param_lst -> func_call_param
Rule 40    func_call_param -> expr
Rule 41    method_decl_stmt -> access_or_empty STATIC VOID MAIN method_params LBRACE stmts_or_empty RBRACE
Rule 42    method_decl_stmt -> access_or_empty type ID method_params LBRACE stmts_or_empty RBRACE
Rule 43    method_params -> LPAREN param_or_empty RPAREN
Rule 44    method_params -> LPAREN STRING LBRACK RBRACK ID RPAREN
Rule 45    param_or_empty -> param_lst
Rule 46    param_or_empty -> empty
Rule 47    param_lst -> param_lst COMMA param
Rule 48    param_lst -> param
Rule 49    param -> type ID
Rule 50    stmts_or_empty -> stmt_lst
Rule 51    stmts_or_empty -> empty
Rule 52    stmt_lst -> stmt_lst comments_lst_or_empty stmt
Rule 53    stmt_lst -> comments_lst_or_empty stmt
Rule 54    stmt -> assign_stmt
Rule 55    stmt -> var_decl_stmt
Rule 56    stmt -> if_stmt
Rule 57    stmt -> while_stmt
Rule 58    stmt -> for_stmt
Rule 59    stmt -> try_stmt
Rule 60    stmt -> ret_stmt
Rule 61    stmt -> func_call_stmt
Rule 62    stmt -> print_stmt
Rule 63    stmt -> obj_call_stmt
Rule 64    stmt -> array_lst
Rule 65    stmt -> hash_map
Rule 66    assign_stmt -> ID EQ expr SEMICOL
Rule 67    assign_stmt -> ID EQ expr
Rule 68    assign_stmt -> THIS PERIOD ID EQ expr SEMICOL
Rule 69    if_stmt -> IF LPAREN expr RPAREN scope ELSE scope
Rule 70    if_stmt -> IF LPAREN expr RPAREN scope ELSE IF LPAREN expr RPAREN scope ELSE scope
Rule 71    scope -> LBRACE stmts_or_empty RBRACE
Rule 72    array_lst -> ARRAYLIST LESS type GREATER ID EQ NEW ARRAYLIST LESS type GREATER LPAREN RPAREN SEMICOL
Rule 73    while_stmt -> WHILE LPAREN expr RPAREN scope
Rule 74    for_stmt -> FOR LPAREN type ID EQ expr SEMICOL expr SEMICOL assign_stmt RPAREN scope
Rule 75    try_stmt -> TRY scope CATCH LPAREN EXCEPTION ID RPAREN scope FINALLY scope
Rule 76    try_stmt -> TRY scope CATCH LPAREN EXCEPTION ID RPAREN scope
Rule 77    ret_stmt -> RETURN expr SEMICOL
Rule 78    expr -> NEW ID LPAREN RPAREN
Rule 79    expr -> expr PLUS expr
Rule 80    expr -> expr MINUS expr
Rule 81    expr -> expr TIMES expr
Rule 82    expr -> expr DIVIDE expr
Rule 83    expr -> expr DOUBLEEQ expr
Rule 84    expr -> expr LESS expr
Rule 85    expr -> expr LESSEQ expr
Rule 86    expr -> expr GREATER expr
Rule 87    expr -> expr GREATEREQ expr
Rule 88    expr -> expr NEQ expr
Rule 89    expr -> expr AND expr
Rule 90    expr -> expr OR expr
Rule 91    expr -> MINUS expr
Rule 92    expr -> BANG expr
Rule 93    expr -> LPAREN expr RPAREN
Rule 94    expr -> NUMBER PERIOD NUMBER
Rule 95    expr -> NUMBER
Rule 96    expr -> STR
Rule 97    expr -> TRUE
Rule 98    expr -> FALSE
Rule 99    expr -> NULL
Rule 100   expr -> ID
Rule 101   type -> base_type
Rule 102   base_type -> INT
Rule 103   base_type -> BOOLEAN
Rule 104   base_type -> STRING
Rule 105   base_type -> VOID
Rule 106   base_type -> FLOAT
Rule 107   empty -> <empty>
Rule 108   hash_map -> HASHMAP LESS type COMMA type GREATER ID EQ NEW HASHMAP LESS type COMMA type GREATER LPAREN RPAREN SEMICOL

Terminals, with rules where they appear

ADD                  : 33
AND                  : 89
ARRAYLIST            : 72 72
BANG                 : 92
BOOLEAN              : 103
CATCH                : 75 76
CLASS                : 16
CLEAR                : 13
COMM                 : 8 9
COMMA                : 12 38 47 108 108
DIVIDE               : 82
DOUBLEEQ             : 83
ELSE                 : 69 70 70
EQ                   : 29 30 31 66 67 68 72 74 108
EXCEPTION            : 75 76
EXTENDS              : 23
FALSE                : 98
FINALLY              : 75
FLOAT                : 106
FOR                  : 74
GREATER              : 72 72 86 108 108
GREATEREQ            : 87
HASHMAP              : 108 108
ID                   : 12 13 16 23 28 29 30 30 31 31 31 32 33 34 34 42 44 49 66 67 68 72 74 75 76 78 100 108
IF                   : 69 70 70
INT                  : 102
LBRACE               : 16 41 42 71
LBRACK               : 44
LESS                 : 72 72 84 108 108
LESSEQ               : 85
LPAREN               : 2 12 13 32 33 35 43 44 69 70 70 72 73 74 75 76 78 93 108
MAIN                 : 41
MINUS                : 80 91
NEQ                  : 88
NEW                  : 31 72 78 108
NULL                 : 99
NUMBER               : 94 94 95
OR                   : 90
PERIOD               : 12 13 32 33 34 68 94
PLUS                 : 79
PRINT                : 2
PRIVATE              : 20
PUBLIC               : 19
PUT                  : 12
RBRACE               : 16 41 42 71
RBRACK               : 44
REMOVE               : 32
RETURN               : 77
RPAREN               : 2 12 13 32 33 35 43 44 69 70 70 72 73 74 75 76 78 93 108
SEMICOL              : 2 12 13 28 29 30 31 32 33 34 66 68 72 74 74 77 108
STATIC               : 41
STR                  : 96
STRING               : 44 104
THIS                 : 68
TIMES                : 81
TRUE                 : 97
TRY                  : 75 76
VOID                 : 41 105
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

access_or_empty      : 16 28 29 30 41 42
access_type          : 17
array_lst            : 64
assign_stmt          : 54 74
base_type            : 101
class_decl           : 14 15
class_decl_or_empty  : 1
class_lst            : 10 14
comments             : 3 4
comments_lst         : 3 6
comments_lst_or_empty : 14 15 24 25 52 53
decl_lst             : 24 25
decl_lsts            : 16 24
empty                : 7 11 18 22 37 46 51
expr                 : 2 12 12 29 32 33 40 66 67 68 69 70 70 73 74 74 77 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 92 93
ext_or_empty         : 16
extends              : 21
for_stmt             : 58
func_call_param      : 38 39
func_call_param_lst  : 36 38
func_call_param_lst_or_empty : 35
func_call_params     : 30 31 34
func_call_stmt       : 61
hash_map             : 65
if_stmt              : 56
method_decl_stmt     : 26
method_params        : 41 42
obj_call_stmt        : 63
param                : 47 48
param_lst            : 45 47
param_or_empty       : 43
print_stmt           : 62
program              : 0
ret_stmt             : 60
scope                : 69 69 70 70 70 73 74 75 75 75 76 76
stmt                 : 27 52 53
stmt_lst             : 50 52
stmts_or_empty       : 41 42 71
try_stmt             : 59
type                 : 28 29 30 42 49 72 72 74 108 108 108 108
var_decl_stmt        : 55
while_stmt           : 57
words_lst            : 5 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl_or_empty
    (10) class_decl_or_empty -> . class_lst
    (11) class_decl_or_empty -> . empty
    (14) class_lst -> . class_lst comments_lst_or_empty class_decl
    (15) class_lst -> . comments_lst_or_empty class_decl
    (107) empty -> .
    (6) comments_lst_or_empty -> . comments_lst
    (7) comments_lst_or_empty -> . empty
    (3) comments_lst -> . comments_lst comments
    (4) comments_lst -> . comments
    (5) comments -> . words_lst
    (8) words_lst -> . words_lst COMM
    (9) words_lst -> . COMM

    $end            reduce using rule 107 (empty -> .)
    PUBLIC          reduce using rule 107 (empty -> .)
    PRIVATE         reduce using rule 107 (empty -> .)
    CLASS           reduce using rule 107 (empty -> .)
    COMM            shift and go to state 9

    program                        shift and go to state 1
    class_decl_or_empty            shift and go to state 2
    class_lst                      shift and go to state 3
    empty                          shift and go to state 4
    comments_lst_or_empty          shift and go to state 5
    comments_lst                   shift and go to state 6
    comments                       shift and go to state 7
    words_lst                      shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl_or_empty .

    $end            reduce using rule 1 (program -> class_decl_or_empty .)


state 3

    (10) class_decl_or_empty -> class_lst .
    (14) class_lst -> class_lst . comments_lst_or_empty class_decl
    (6) comments_lst_or_empty -> . comments_lst
    (7) comments_lst_or_empty -> . empty
    (3) comments_lst -> . comments_lst comments
    (4) comments_lst -> . comments
    (107) empty -> .
    (5) comments -> . words_lst
    (8) words_lst -> . words_lst COMM
    (9) words_lst -> . COMM

    $end            reduce using rule 10 (class_decl_or_empty -> class_lst .)
    PUBLIC          reduce using rule 107 (empty -> .)
    PRIVATE         reduce using rule 107 (empty -> .)
    CLASS           reduce using rule 107 (empty -> .)
    COMM            shift and go to state 9

    comments_lst_or_empty          shift and go to state 10
    comments_lst                   shift and go to state 6
    empty                          shift and go to state 11
    comments                       shift and go to state 7
    words_lst                      shift and go to state 8

state 4

    (11) class_decl_or_empty -> empty .
    (7) comments_lst_or_empty -> empty .

    $end            reduce using rule 11 (class_decl_or_empty -> empty .)
    PUBLIC          reduce using rule 7 (comments_lst_or_empty -> empty .)
    PRIVATE         reduce using rule 7 (comments_lst_or_empty -> empty .)
    CLASS           reduce using rule 7 (comments_lst_or_empty -> empty .)


state 5

    (15) class_lst -> comments_lst_or_empty . class_decl
    (16) class_decl -> . access_or_empty CLASS ID ext_or_empty LBRACE decl_lsts RBRACE
    (17) access_or_empty -> . access_type
    (18) access_or_empty -> . empty
    (19) access_type -> . PUBLIC
    (20) access_type -> . PRIVATE
    (107) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 17
    CLASS           reduce using rule 107 (empty -> .)

    class_decl                     shift and go to state 12
    access_or_empty                shift and go to state 13
    access_type                    shift and go to state 14
    empty                          shift and go to state 15

state 6

    (6) comments_lst_or_empty -> comments_lst .
    (3) comments_lst -> comments_lst . comments
    (5) comments -> . words_lst
    (8) words_lst -> . words_lst COMM
    (9) words_lst -> . COMM

    PUBLIC          reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    PRIVATE         reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    CLASS           reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    ID              reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    THIS            reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    IF              reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    WHILE           reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    FOR             reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    TRY             reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    RETURN          reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    PRINT           reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    ARRAYLIST       reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    HASHMAP         reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    STATIC          reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    INT             reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    BOOLEAN         reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    STRING          reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    VOID            reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    FLOAT           reduce using rule 6 (comments_lst_or_empty -> comments_lst .)
    COMM            shift and go to state 9

    comments                       shift and go to state 18
    words_lst                      shift and go to state 8

state 7

    (4) comments_lst -> comments .

    COMM            reduce using rule 4 (comments_lst -> comments .)
    PUBLIC          reduce using rule 4 (comments_lst -> comments .)
    PRIVATE         reduce using rule 4 (comments_lst -> comments .)
    CLASS           reduce using rule 4 (comments_lst -> comments .)
    ID              reduce using rule 4 (comments_lst -> comments .)
    THIS            reduce using rule 4 (comments_lst -> comments .)
    IF              reduce using rule 4 (comments_lst -> comments .)
    WHILE           reduce using rule 4 (comments_lst -> comments .)
    FOR             reduce using rule 4 (comments_lst -> comments .)
    TRY             reduce using rule 4 (comments_lst -> comments .)
    RETURN          reduce using rule 4 (comments_lst -> comments .)
    PRINT           reduce using rule 4 (comments_lst -> comments .)
    ARRAYLIST       reduce using rule 4 (comments_lst -> comments .)
    HASHMAP         reduce using rule 4 (comments_lst -> comments .)
    STATIC          reduce using rule 4 (comments_lst -> comments .)
    INT             reduce using rule 4 (comments_lst -> comments .)
    BOOLEAN         reduce using rule 4 (comments_lst -> comments .)
    STRING          reduce using rule 4 (comments_lst -> comments .)
    VOID            reduce using rule 4 (comments_lst -> comments .)
    FLOAT           reduce using rule 4 (comments_lst -> comments .)


state 8

    (5) comments -> words_lst .
    (8) words_lst -> words_lst . COMM

  ! shift/reduce conflict for COMM resolved as shift
    PUBLIC          reduce using rule 5 (comments -> words_lst .)
    PRIVATE         reduce using rule 5 (comments -> words_lst .)
    CLASS           reduce using rule 5 (comments -> words_lst .)
    ID              reduce using rule 5 (comments -> words_lst .)
    THIS            reduce using rule 5 (comments -> words_lst .)
    IF              reduce using rule 5 (comments -> words_lst .)
    WHILE           reduce using rule 5 (comments -> words_lst .)
    FOR             reduce using rule 5 (comments -> words_lst .)
    TRY             reduce using rule 5 (comments -> words_lst .)
    RETURN          reduce using rule 5 (comments -> words_lst .)
    PRINT           reduce using rule 5 (comments -> words_lst .)
    ARRAYLIST       reduce using rule 5 (comments -> words_lst .)
    HASHMAP         reduce using rule 5 (comments -> words_lst .)
    STATIC          reduce using rule 5 (comments -> words_lst .)
    INT             reduce using rule 5 (comments -> words_lst .)
    BOOLEAN         reduce using rule 5 (comments -> words_lst .)
    STRING          reduce using rule 5 (comments -> words_lst .)
    VOID            reduce using rule 5 (comments -> words_lst .)
    FLOAT           reduce using rule 5 (comments -> words_lst .)
    COMM            shift and go to state 19

  ! COMM            [ reduce using rule 5 (comments -> words_lst .) ]


state 9

    (9) words_lst -> COMM .

    COMM            reduce using rule 9 (words_lst -> COMM .)
    PUBLIC          reduce using rule 9 (words_lst -> COMM .)
    PRIVATE         reduce using rule 9 (words_lst -> COMM .)
    CLASS           reduce using rule 9 (words_lst -> COMM .)
    ID              reduce using rule 9 (words_lst -> COMM .)
    THIS            reduce using rule 9 (words_lst -> COMM .)
    IF              reduce using rule 9 (words_lst -> COMM .)
    WHILE           reduce using rule 9 (words_lst -> COMM .)
    FOR             reduce using rule 9 (words_lst -> COMM .)
    TRY             reduce using rule 9 (words_lst -> COMM .)
    RETURN          reduce using rule 9 (words_lst -> COMM .)
    PRINT           reduce using rule 9 (words_lst -> COMM .)
    ARRAYLIST       reduce using rule 9 (words_lst -> COMM .)
    HASHMAP         reduce using rule 9 (words_lst -> COMM .)
    STATIC          reduce using rule 9 (words_lst -> COMM .)
    INT             reduce using rule 9 (words_lst -> COMM .)
    BOOLEAN         reduce using rule 9 (words_lst -> COMM .)
    STRING          reduce using rule 9 (words_lst -> COMM .)
    VOID            reduce using rule 9 (words_lst -> COMM .)
    FLOAT           reduce using rule 9 (words_lst -> COMM .)


state 10

    (14) class_lst -> class_lst comments_lst_or_empty . class_decl
    (16) class_decl -> . access_or_empty CLASS ID ext_or_empty LBRACE decl_lsts RBRACE
    (17) access_or_empty -> . access_type
    (18) access_or_empty -> . empty
    (19) access_type -> . PUBLIC
    (20) access_type -> . PRIVATE
    (107) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 17
    CLASS           reduce using rule 107 (empty -> .)

    class_decl                     shift and go to state 20
    access_or_empty                shift and go to state 13
    access_type                    shift and go to state 14
    empty                          shift and go to state 15

state 11

    (7) comments_lst_or_empty -> empty .
